# 10week__chat_DB

./: .env  app.py  pyproject.toml  requirements.txt
static/: script.js
