[project]
name = "chat-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.2"
dependencies = [
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "greenlet>=3.2.4",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
]
